<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GeneradeCode" >

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:hint="@string/CodeExample"
        android:text="@string/CodeInstruct"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewInstructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/CodeExample" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewInstructions"
        android:layout_below="@+id/editTextCode"
        android:layout_marginTop="19dp"
        android:text="@string/CodeQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewQuestion"
        android:layout_below="@+id/textViewQuestion"
        android:layout_marginTop="22dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonYes"
        android:layout_alignBottom="@+id/buttonYes"
        android:layout_alignRight="@+id/textViewQuestion"
        android:onClick="close"
        android:text="@string/cancel"/>

</RelativeLayout>