<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Statistic" >

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/Number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNumber"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal"
        android:ems="10"/>

    <TextView
        android:id="@+id/textViewHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumber"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/textViewNumber"
        android:text="@string/Hours"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewHours"
        android:layout_alignBottom="@+id/textViewHours"
        android:layout_toRightOf="@+id/textViewNumber"
        android:text="@string/Minutes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/EditTextHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditTextMinutes"
        android:layout_alignBottom="@+id/EditTextMinutes"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/textViewNumber"
       	android:ems="10"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/EditTextMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textViewNumber"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonInputOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextHours"
        android:layout_below="@+id/EditTextHours"
        android:layout_marginTop="70dp"
        android:onClick="onOk"
        android:text="@string/ok" />

    <Button
        android:id="@+id/buttonInputCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonInputOk"
        android:layout_alignRight="@+id/EditTextMinutes"
        android:text="@string/cancel"
        android:onClick="close" />
    
</RelativeLayout>