<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTime"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonTime"
        android:layout_marginBottom="38dp"
        android:text="@string/title_activity_generade_code"
        android:onClick="startCodeGenerator" />

    <Button
        android:id="@+id/buttonInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCode"
        android:layout_alignLeft="@+id/buttonCode"
        android:layout_alignRight="@+id/buttonTime"
        android:layout_marginBottom="32dp"
        android:text="@string/title_activity_statistic"
        android:onClick="startStatistic" />

    <TextView
        android:id="@+id/textMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/MenuText"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="startTime"
        android:text="@string/title_activity_set_alarms" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTime"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="31dp"
        android:text="Magic CSV Button"
        android:onClick="test"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="CSV-Button"
        android:onClick="startCSV" />

</RelativeLayout>